# SUSTech-CS401-Project

./: .gitignore  .gitmodules  LICENSE  README.md
doc/: code_explanation.md  task_run.md
src/agilex_pure_pursuit/: CMakeLists.txt  README.md  package.xml
src/agilex_pure_pursuit/include/: path.h  pure_pursuit.h
src/agilex_pure_pursuit/launch/: pure_pursuit.launch  record_path.launch
src/agilex_pure_pursuit/param/: param.yaml
src/agilex_pure_pursuit/src/: path.cpp  pure_pursuit.cpp  record_path.cpp
src/detector/: package.xml
src/detector_node/: CMakeLists.txt  package.xml
src/detector_node/rviz/: detector.rviz
src/detector_node/src/: detector_node.cpp
src/rrt_exploration/include/: functions.h  mtrand.h
src/rrt_exploration/launch/: simple.launch  single.launch
src/rrt_exploration/scripts/: assigner.py  filter.py  functions.py
src/rrt_exploration/src/: functions.cpp  global_rrt_detector.cpp  local_rrt_detector.cpp  mtrand.cpp
src/sentry_bringup/: CMakeLists.txt  package.xml
src/sentry_bringup/launch/: detect.launch  path_editor.launch  rrt.launch  sentry_bringup.launch  signal.launch  start.launch  test.launch  yolo.launch
src/sentry_bringup/rviz/: detect.rviz  detector.rviz  navigation.rviz  path_editor.rviz
src/sentry_bringup/script/: adjust.py  send_goal.py
